# binfiles

./: .latexmk  .latexmkrc  .profile  .spacemacs  .zprofile  .zshrc  LICENSE  install.sh  irc  screentool.py  startconda  stconfig.h
.config/dunst/: dunstrc
.config/i3/: config
.config/polybar/: config  player-mpris-tail.py
nautilus/: Upload to novaember
templates/cppProject/: .dir-locals.el  CMakeLists.txt
templates/latex/: norsk.tex
